syntax = "proto3";

package guard;

option go_package = "github.com/casnerano/protoc-gen-go-guard/proto;guard";

import "google/protobuf/descriptor.proto";

enum Match {
  AT_LEAST_ONE = 0;
  ALL = 1;
}

message RoleBased {
  repeated string roles = 1;
  optional Match requirement = 2;
}

message PolicyBased {
  repeated string policies = 1;
  optional Match requirement = 2;
}

message Rule {
  oneof strategy {
    bool allow_public = 1;
    bool require_authentication = 2;
    AuthenticatedAccess authenticated_access = 3;
  }
}

message AuthenticatedAccess {
  RoleBased role_based = 1;
  PolicyBased policy_based = 2;
}

extend google.protobuf.ServiceOptions {
  repeated Rule service_rules = 50001;
}
extend google.protobuf.MethodOptions {
  repeated Rule method_rules = 50002;
}